# Archive-CTF

./: .gitignore  README.md
FinalTechom/Final_Techom/PWN/: exploit  exploit.c
FinalTechom/Final_Techom/Web/: solvenoex.py
FinalTechom/Final_Techom/reverse/textual/Pyarmor-Static-Unpack-1shot/pycdc/: ASTree.cpp  CMakeLists.txt  bytecode.cpp  bytecode.h  plusaes.hpp  pyarmor-1shot.cpp  pyc_code.cpp  pyc_code.h  pyc_module.cpp  pyc_module.h  pyc_string.cpp  pyc_string.h  pycdas.cpp
cbc/: c.txt  err.py  rsa.py  saas.py
cbc/Early_dist/: ear.py  ear1.py  ear2.py  run.sh:Zone.Identifier
cbc/Noise_dist/: .gitkeep:Zone.Identifier  cry.py
cbc/Trade Offer_dist/: program  rev_program.zip:Zone.Identifier
cbc/Trade Offer_dist/__MACOSX/: ._program
cbc/aa.rep/: projectState
cbc/aa.rep/user/: ~index.bak  ~journal.bak
cbc/lz1_dist/: evil.z77  run.py  run.py:Zone.Identifier  run1.py
cbc/trade.rep/: projectState
cbd/: bab.py
cbdNasional/: .ctfdumper_seen.json
cbdRegional/: .ctfdumper_seen.json
codeweek26/: .ctfdumper_seen.json
compfest/: p.py
compfest17/: chall.py  custom.py  custom1.py  flag.txt  secret.py  solve_mt_and_unmask.py  solve_polynomial_and_flag.sage  transcript.txt
compfest17/allin/: libc.so.6:Zone.Identifier  solveall.py
findit26/: .ctfdumper_seen.json
gemastik26/: .ctfdumper_seen.json
gemastik26/PWN/Hollow/: chall  (+1 more)
hology/rsa/: solve.py  solve1.py
itechno/: blast  challpwnba  fibo.py  idat.zlib  mono.py  solverbola.py  solverbola1.py  solverbola2.py  ttdecomp.c  unity.py
pico/: gatekeep_writeup.md  gatekeeper_writeup.md
schema/: chal  flag.txt  solver_comodo.py  solver_kebut.py
tcp1p/: ExploitGenerator.java  getjar.py  hasil.txt  payload.ser  solver.py  solver2.py
techomfest/: akane  akane.py  akane2.py
techomfest/httpwn/: httpwn.cgi  main.c  solve1.py  solve2.py  solver.py  solver2.py
techomfest/keycheck/: key.py
techomfest/superreveng/: solver.py
techomfest/teio/: solve.py  solver.py
wugemastik/zhezhi/: zhezhi_______:Zone.Identifier
(+352 files in other folders)
